--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 version: "3.8"
 services:
   server:
-    build: ./movie-gallery-server
+    build: ./server
     container_name: server_c
     ports:
       - "5000:5000"
   client:
-    build: ./movie-gallery
+    build: ./client
     container_name: client_c
     ports:
       - "8081:8081"
