fix: chagne docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
     container_name: client_c
     ports:
       - "8081:8081"
-    stdin_open: true
-    tty: true
+    #stdin_open: true
+    #tty: true
     environment:
       - expo_devtools_listen_address=0.0.0.0
       - chokidar_usepolling=true
