fix: modify docker settings

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,8 +1,8 @@
 # Base image
 FROM node:18.17.1-alpine
 
-# install expo and chokidar global
-RUN npm i -g expo-cli@latest chokidar
+# install expo and global
+RUN npm i -g expo-cli@latest 
 
 # Create app directory
 WORKDIR /client
@@ -19,6 +19,8 @@ COPY . .
 # Install app dependencies
 RUN npm install
 
+#copy Fonts
+COPY node_modules/@expo/vector-icons/build/vendor/react-native-vector-icons/Fonts ./assets/node_modules/@expo/vector-icons/build/vendor/react-native-vector-icons/Fonts
 
 # Build the app for production
 #RUN npx react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ios/main.jsbundle --assets-dest ios/assets
