--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     container_name: client_c
     ports:
       - "8081:8081"
-    #stdin_open: true
-    #tty: true
-    environment:
-      - expo_devtools_listen_address=0.0.0.0
-      - chokidar_usepolling=true
-    volumes:
-      - .:/home
+    stdin_open: true
+    tty: true
+    # environment:
+    #   - expo_devtools_listen_address=0.0.0.0
+    #   - chokidar_usepolling=true
+    # volumes:
+    #   - .:/home
