--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -20,7 +20,7 @@ COPY . .
 RUN npm install
 
 #copy Fonts
-COPY node_modules/@expo/vector-icons/build/vendor/react-native-vector-icons/Fonts ./assets/node_modules/@expo/vector-icons/build/vendor/react-native-vector-icons/Fonts
+COPY ./node_modules/@expo/vector-icons/build/vendor/react-native-vector-icons/Fonts ./assets/node_modules/@expo/vector-icons/build/vendor/react-native-vector-icons/Fonts
 
 # Build the app for production
 #RUN npx react-native bundle --platform ios --dev false --entry-file index.js --bundle-output ios/main.jsbundle --assets-dest ios/assets
