--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,5 @@ services:
     # environment:
     #   - expo_devtools_listen_address=0.0.0.0
     #   - chokidar_usepolling=true
-    # volumes:
-    #   - .:/home
+    volumes:
+      - ./client:/client
